--- a/src/svg.html
+++ b/src/svg.html
@@ -8,6 +8,10 @@
   <body>
     <h1>SVG</h1>
 
+    <svg>
+      <circle cx="50" cy="50" r="40" fill="green" />
+    </svg>
+
     <svg width="160" height="160">
       <defs>
         <style>
